[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/MainMenu.tres" type="Theme" id=1]
[ext_resource path="res://assets/UI/Menu/lobby.gd" type="Script" id=2]
[ext_resource path="res://img/MoonwardsLogo2018-1200.png" type="Texture" id=3]
[ext_resource path="res://scripts/UIElement.gd" type="Script" id=4]

[node name="Lobby" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Logo" type="TextureRect" parent="."]
margin_right = 984.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="connect" type="VBoxContainer" parent="."]
margin_left = 392.0
margin_top = 354.0
margin_right = 592.0
margin_bottom = 509.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="error_label" type="Label" parent="connect"]
margin_right = 200.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1
autowrap = true

[node name="SinglePlayer" type="Button" parent="connect"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SinglePlayer"
script = ExtResource( 4 )

[node name="host" type="Button" parent="connect"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host"

[node name="ipcontainer" type="HBoxContainer" parent="connect"]
margin_top = 76.0
margin_right = 200.0
margin_bottom = 104.0
alignment = 2

[node name="ip_label" type="Label" parent="connect/ipcontainer"]
margin_right = 76.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "IP:"

[node name="ip" type="LineEdit" parent="connect/ipcontainer"]
margin_left = 80.0
margin_right = 200.0
margin_bottom = 28.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "127.0.0.1"
align = 1
caret_blink = true

[node name="join" type="Button" parent="connect"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join"

[node name="username" type="Label" parent="connect"]
visible = false
margin_top = 98.0
margin_right = 200.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Name:"

[node name="name" type="LineEdit" parent="connect"]
visible = false
margin_top = 130.0
margin_right = 200.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Player1"
align = 1
caret_blink = true

[node name="AnotherName" type="Button" parent="connect"]
visible = false
margin_top = 130.0
margin_right = 200.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Another Name"

[node name="Back" type="Button" parent="connect"]
margin_top = 130.0
margin_right = 200.0
margin_bottom = 155.0
rect_min_size = Vector2( 200, 25 )
size_flags_horizontal = 0
text = "Back"
script = ExtResource( 4 )

[node name="error" type="AcceptDialog" parent="."]
margin_left = 417.0
margin_top = 560.0
margin_right = 567.0
margin_bottom = 660.0
rect_min_size = Vector2( 150, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
dialog_text = "Error
"

[node name="players" type="VBoxContainer" parent="."]
visible = false
margin_left = 392.0
margin_top = 481.0
margin_right = 592.0
margin_bottom = 735.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="label" type="Label" parent="players"]
margin_right = 200.0
margin_bottom = 28.0
text = "Awaiting Players..."

[node name="list" type="ItemList" parent="players"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 232.0
rect_min_size = Vector2( 100, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="start" type="Button" parent="players"]
margin_top = 236.0
margin_right = 200.0
margin_bottom = 254.0
text = "Start"

[node name="Options" type="Node" parent="."]

[node name="NoCamera" type="Node" parent="Options"]

[node name="WaitServer" type="VBoxContainer" parent="."]
visible = false
margin_left = 392.0
margin_top = 546.0
margin_right = 592.0
margin_bottom = 595.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="Label" type="Label" parent="WaitServer"]
margin_right = 200.0
margin_bottom = 49.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Message
"
align = 1
autowrap = true
[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="connect/AnotherName" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="players/start" to="." method="_on_start_pressed"]
